<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.game.LevelSelectActivity"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/black"
        android:gravity="end"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/save_button"
            android:scaleType="centerInside"
            android:background="@color/black"
            android:src="@drawable/save_button"
            android:contentDescription="@string/save_icon"
        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/levelMenuTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/levelMenu"
            android:textSize="40sp"
            android:textColor="@color/teal_200"
            android:layout_marginBottom="32dp"
        />

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:columnCount="5"
        android:rowCount="2"
        android:paddingVertical="10dp"
        android:paddingHorizontal="5dp">

            <ImageButton
                android:id="@+id/level_1_tile"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:scaleType="centerInside"
                android:background="@drawable/level1"
                android:contentDescription="@string/level1Select"
            />

            <ImageButton
                android:id="@+id/level_2_tile"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:scaleType="centerInside"
                android:background="@drawable/level2"
                android:contentDescription="@string/level2Select"
            />

            <ImageButton
                android:id="@+id/level_3_tile"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:scaleType="centerInside"
                android:background="@drawable/level3"
                android:contentDescription="@string/level3Select"
            />

            <ImageButton
                android:id="@+id/level_4_tile"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:scaleType="centerInside"
                android:background="@drawable/level4"
                android:contentDescription="@string/level4Select"
            />

            <ImageButton
                android:id="@+id/level_5_tile"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:scaleType="centerInside"
                android:background="@drawable/level5"
                android:contentDescription="@string/level5Select"
            />

            <ImageButton
                android:id="@+id/level_6_tile"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:scaleType="centerInside"
                android:background="@drawable/level6"
                android:contentDescription="@string/level6Select"
            />

            <ImageButton
                android:id="@+id/level_7_tile"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:scaleType="centerInside"
                android:background="@drawable/level7"
                android:contentDescription="@string/level7Select"
            />

            <ImageButton
                android:id="@+id/level_8_tile"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:scaleType="centerInside"
                android:background="@drawable/level8"
                android:contentDescription="@string/level8Select"
            />

            <ImageButton
                android:id="@+id/level_9_tile"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:scaleType="centerInside"
                android:background="@drawable/level9"
                android:contentDescription="@string/level9Select"
            />

            <ImageButton
                android:id="@+id/level_10_tile"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:scaleType="centerInside"
                android:background="@drawable/level10"
                android:contentDescription="@string/level10Select"
            />

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/menu_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/teal_200"
            android:layout_marginBottom="32dp"
        />

    </LinearLayout>

</LinearLayout>